@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="4"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="126"
+VERSION_BUILD="127"
 
 # $Log$
+#
+# BUILD : 1.4.0.127 (SVN)
+# BUGS  : 453
+# NOTES : Fixed channel mode hash being case insensitive. Thanks to Trystan for providing the fix!
 #
 # BUILD : 1.4.0.126 (SVN)
 # BUGS  : 452
